tests/error/template_no_match.gw
#! [contains] arguments do not match for template call
class C {
  fun void test<~A](float f) {}
  fun void test<~A]() {}
}
var C c;
c.test<~int](2.3);
c.test<~int](2.3, 2.3);
